# scConvert

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE-text.html  NAMESPACE  NEWS.md  NOTES.html  NOTES.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  cleanup  configure  configure.win  findings.html  findings.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: AnnDataEncoding.R  AppendData.R  AssembleObject.R  Connect.R  Convert.R  ConvertCLI.R  ConvertZarr.R  GetObject.R  LoadCosMx.R  LoadH5AD.R  LoadH5MU.R  LoadH5Seurat.R  LoadLoom.R  LoadStereoSeq.R  LoadXenium.R  LoadZarr.R  ReadH5.R  ReadWriteSOMA.R  SaveH5MU.R  SaveH5Seurat.R  SaveLoom.R  SaveZarr.R  SpatialConversion.R  SpatialData.R  SpatialFOV.R  StreamHDF5.R  Transpose.R  UtilsAssayCompat.R  UtilsH5Access.R  V5Compatibility.R  V5LayerSupport.R  WriteH5AD.R  WriteH5Group.R  ZarrRemote.R  ZarrStore.R  h5Seurat.R  h5Seurat_bindings.R  h5info.R  loom.R  loom_bindings.R  (+3 more)
articles/: atlas-bpcells.html  atlas-bpcells.md  atlas-scale-cli.html  cli-usage.html  cli-usage.md  compare-tools.html  conversion-modes.html  conversion-modes.md  convert-anndata.html  convert-anndata.md  convert-loom.html  convert-loom.md  convert-sce.html  convert-sce.md  convert-soma.html  convert-soma.md  convert-spatialdata.html  convert-spatialdata.md  convert-zarr.html  convert-zarr.md  data-mapping-reference.html  data-mapping-reference.md  getting-started.html  getting-started.md  h5Seurat-load.html  h5Seurat-load.md  h5Seurat-spec.html  h5Seurat-spec.md  immune-repertoire.html  immune-repertoire.md  index.html  index.md  multimodal-citeseq.html  multimodal-citeseq.md  multimodal-h5mu.html  multimodal-h5mu.md  scatac-signac.html  scatac-signac.md  soma-census.html  spatial-technologies.html  (+3 more)
blobs.spatialdata.zarr/: zarr.json
dev/: NOTES.md  RUST_CORE_PLAN.md
man/: AnnDataLayerToSeurat.Rd  AnnDataReductionKey.Rd  BoolToInt.Rd  CachedGuessDType.Rd  CachedUtf8Type.Rd  ChunkPoints.Rd  ClosestVersion.Rd  CompoundToGroup.Rd  ConvertFOVToH5AD.Rd  DecodeCategorical.Rd  DeconstructSparseCSR.Rd  DetectMultiLibrary.Rd  Dims.Rd  DirectSeuratToH5AD.Rd  EncodeCategorical.Rd  ExtractFOVCentroids.Rd  ExtractFOVMolecules.Rd  ExtractFOVSegmentation.Rd  FileType.Rd  GetAssayDataCompat.Rd  GetClass.Rd  GetMargin.Rd  GetObject.Rd  GuessDType.Rd  H5ADSpatialToSeurat.Rd  H5ADToH5MU.Rd  H5ADToH5Seurat.Rd  H5ADToLoom.Rd  H5ADToSOMA.Rd  H5ADToSpatialData.Rd  H5ADToZarr.Rd  H5MUToH5AD.Rd  H5MUToH5Seurat.Rd  H5MUToLoom.Rd  H5MUToSOMA.Rd  H5MUToZarr.Rd  H5SeuratToH5MU.Rd  H5SeuratToLoom.Rd  H5SeuratToSOMA.Rd  H5SeuratToSpatialData.Rd  (+167 more)
news/: index.html  index.md
reference/: AddAnndataEncoding.html  AddAnndataEncoding.md  AddGenericSpatialData.html  AddGenericSpatialData.md  AddSlideSeqSpatialData.html  AddSlideSeqSpatialData.md  AddVisiumSpatialData.html  AddVisiumSpatialData.md  AnnDataLayerToSeurat.html  AnnDataLayerToSeurat.md  AnnDataReductionKey.html  AnnDataReductionKey.md  AppendData.H5File.html  AppendData.html  AssembleObject.html  AssembleSeuratCommand.html  BasicWrite.html  BoolToInt.html  BoolToInt.md  CachedGuessDType.html  CachedGuessDType.md  CachedUtf8Type.html  CachedUtf8Type.md  CheckMatrix.html  CheckMatrix.md  ChunkPoints.html  ChunkPoints.md  ClosestVersion.html  ClosestVersion.md  CompoundToGroup.html  CompoundToGroup.md  Connect.html  Convert.character.html  Convert.html  ConvertBPCellsMatrix.html  ConvertBPCellsMatrix.md  ConvertFOVToH5AD.html  (+528 more)
rust/: Cargo.toml  README.md  conformance-fixtures.json
rust/scconvert-capi/: Cargo.toml
rust/scconvert-capi/src/: lib.rs
rust/scconvert-cli/: Cargo.toml
rust/scconvert-cli/src/: main.rs
rust/scconvert-core/: Cargo.toml
rust/scconvert-core/src/: error.rs  format.rs  lib.rs  model.rs  report.rs  route.rs
rust/scconvert-core/src/io/: mod.rs  sparse.rs
rust/scconvert-core/src/routes/: h5ad_to_h5seurat.rs  mod.rs
rust/scconvert-core/tests/: pbmc_small_roundtrip.rs
(+234 files in other folders)
